--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     right: 0;
     font-size: 18px;
     top: -50vh;
-    background-color: rgb(255, 0, 0);
+    background-color: white;
 
 }
 
@@ -31,7 +31,7 @@ body {
     left: 0;
     right: 0;
     height: 5vh;
-    background-color: rgb(255, 0, 0);
+    background-color: white;
     z-index: 20;
     color: rgb(0, 0, 0);
     display: flex;
@@ -60,4 +60,53 @@ body {
     align-self: center;
     padding-right: 10px;
     font-size: 18px;
+}
+
+/* HEADER */
+
+header {
+    background-image: url(img/header.jpg);
+    background-position: center;
+    color: white;
+    height: 100vh;
+}
+
+.wrap {
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+
+header .wrap h1 {
+    text-transform: uppercase;
+    text-shadow: 2px 2px black;
+    padding: 50% 5% 10% 5%;
+    font-size: 46px;
+    text-align: center;
+}
+
+header .wrap p {
+    padding: 5%;
+    font-size: 16px;
+    color: rgb(238, 238, 238);
+    text-align: center;
+}
+
+header .wrap button {
+    margin: 10% auto;
+}
+
+.btn {
+    display: block;
+    padding: 10px 20px;
+    font-size: 18px;
+    color: white;
+    border: 1px solid rgb(0, 100, 0);
+    border-radius: 25%;
+    background-color: rgb(0, 151, 0);
+    -moz-border-radius: 38px;
+    -webkit-border-radius: 38px;
+    text-transform: uppercase;
+    transition: 0.3s;
+    cursor: pointer;
 }
