--- a/style.css
+++ b/style.css
@@ -318,3 +318,85 @@ header .wrap button {
     height: 100%;
     transform: scale(2.5);
 }
+
+/* SECTION ATTRIBUTE */
+
+.attribute {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: rgb(247, 245, 240);
+    box-shadow: 0px 0px 70px 0px rgba(0, 0, 0, 0.2);
+}
+
+.attr-des {
+    flex-basis: 100%;
+}
+
+.attr-des h1 {
+    font-size: 30px;
+    text-transform: uppercase;
+    padding: 15% 5% 2% 5%;
+    text-align: center;
+}
+
+.attr-des p {
+    font-size: 18px;
+    padding: 0% 5% 15% 5%;
+    text-align: center;
+    color: rgb(53, 53, 53);
+}
+
+.attr {
+    flex-basis: 100%;
+    text-align: center;
+    padding: 5%;
+}
+
+.attr span {
+    font-size: 40px;
+    height: 80px;
+    width: 80px;
+    border: 4px solid rgb(53, 53, 53);
+    border-radius: 50%;
+    line-height: 70px;
+    text-align: center;
+    color: rgb(53, 53, 53);
+}
+
+.attr h2 {
+    position: relative;
+    font-size: 24px;
+    text-transform: uppercase;
+    padding-top: 5%;
+}
+
+.attr p {
+    font-size: 16px;
+    color: rgb(53, 53, 53);
+}
+
+
+.attr h2::before {
+    display: block;
+    content: "";
+    width: 70px;
+    height: 2px;
+    background-color: rgb(53, 53, 53);
+    position: absolute;
+    top: -40px;
+    left: 40px;
+}
+
+.attr h2::after {
+    display: block;
+    content: "";
+    width: 70px;
+    height: 2px;
+    background-color: rgb(53, 53, 53);
+    position: absolute;
+    top: -40px;
+    right: 40px;
+}
