--- a/style.css
+++ b/style.css
@@ -329,6 +329,7 @@ header .wrap button {
     align-items: center;
     background-color: rgb(247, 245, 240);
     box-shadow: 0px 0px 70px 0px rgba(0, 0, 0, 0.2);
+    padding-bottom: 40px;
 }
 
 .attr-des {
@@ -399,4 +400,85 @@ header .wrap button {
     position: absolute;
     top: -40px;
     right: 40px;
+}
+
+/* SECTION CLIENTS */
+
+.clients {
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.heading {
+    flex-basis: 100%;
+    text-align: center;
+}
+
+.heading h1 {
+    font-size: 30px;
+    text-transform: uppercase;
+    padding: 10% 5% 0 5%;
+}
+
+.heading p {
+    font-size: 18px;
+    padding-bottom: 10%;
+    color: rgb(53, 53, 53);
+}
+
+.customerFoto {
+    position: relative;
+    flex-basis: 100%;
+    justify-content: space-between;
+    padding: 5%;
+}
+
+.customerFoto img {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: translate(50%, 0);
+    width: 50%;
+    height: auto;
+    border-radius: 50%;
+}
+
+.customer p:nth-of-type(1) {
+    font-size: 18px;
+    color: rgb(53, 53, 53);
+    padding: 5%;
+}
+
+.customer p:nth-of-type(2) {
+    font-size: 16px;
+    color: rgb(0, 151, 0);
+    padding: 5%;
+}
+
+.customer {
+    position: relative;
+    background: rgb(247, 245, 240);
+    border-radius: 5%;
+    padding: 5%;
+    text-align: center;
+    margin: 5%;
+    box-shadow: 0px 0px 70px 0px rgba(0, 0, 0, 0.2);
+}
+
+.customer:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border: 24px solid transparent;
+    border-bottom-color: rgb(247, 245, 240);
+    border-top: 0;
+    margin-left: -20px;
+    margin-top: -20px;
 }
