--- a/style.css
+++ b/style.css
@@ -16,12 +16,13 @@ body {
 /* NAV */
 
 .menu {
-    position: absolute;
+    position: fixed;
     left: 0;
     right: 0;
     font-size: 18px;
-    top: -50vh;
+    top: -15vh;
     background-color: white;
+    transition: 0.3s;
 
 }
 
@@ -60,6 +61,10 @@ body {
     align-self: center;
     padding-right: 10px;
     font-size: 18px;
+}
+
+.active {
+    top: 5vh;
 }
 
 /* HEADER */
