--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ ul li a:hover {
     right: 0;
     height: 5vh;
     background-color: white;
-    z-index: 20;
+    z-index: 2;
     color: rgb(0, 0, 0);
     display: flex;
     justify-content: space-between;
@@ -87,6 +87,27 @@ ul li a:hover {
 
 .active {
     top: 5vh;
+}
+
+@media (min-width: 768px) and (orientation: portrait) {
+
+    ul li a {
+        font-size: 18px;
+    }
+
+    .logo span {
+        padding-left: 50px;
+    }
+
+    .logo a {
+        font-size: 20px;
+    }
+
+    .burger {
+        padding-right: 20px;
+        font-size: 20px;
+    }
+
 }
 
 /* HEADER */
