--- a/style.css
+++ b/style.css
@@ -705,6 +705,48 @@ header .wrap button {
     margin-top: -20px;
 }
 
+@media (min-width: 768px) and (orientation: portrait) {
+
+    .heading h1 {
+        font-size: 40px;
+        padding: 10% 5% 1% 5%;
+    }
+
+    .heading p {
+        font-size: 22px;
+        padding: 0 2% 2% 2%;
+    }
+
+    .customerFoto {
+        padding: 2%;
+    }
+
+    .customerFoto img {
+        position: relative;
+        top: 0;
+        left: 50%;
+        transform: translate(-50%, 0);
+        width: 30%;
+        height: auto;
+        border-radius: 50%;
+    }
+
+    .customer p:nth-of-type(1) {
+        font-size: 22px;
+        padding: 1%;
+    }
+
+    .customer p:nth-of-type(2) {
+        font-size: 22px;
+        padding: 1%;
+    }
+
+    .customer {
+        padding: 1%;
+        margin: 4%;
+    }
+}
+
 /* SECTION NEXT-PROJECT */
 
 .next-project {
