--- a/style.css
+++ b/style.css
@@ -110,6 +110,48 @@ ul li a:hover {
 
 }
 
+@media (min-width: 1024px) and (orientation: portrait) {
+
+    .menu {
+        left: 40%;
+        right: 0;
+        top: 0;
+        z-index: 3;
+    }
+
+    .menu ul {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding: 0;
+        height: 5vh;
+    }
+
+
+
+    ul li a {
+        padding: 20px 10px;
+        color: black;
+        font-size: 20px;
+        letter-spacing: 0px;
+    }
+
+
+
+    .logo span {
+        padding-left: 20px;
+    }
+
+    .logo a {
+        font-size: 22px;
+    }
+
+    .burger {
+        display: none;
+    }
+
+}
+
 /* HEADER */
 
 header {
