--- a/style.css
+++ b/style.css
@@ -111,7 +111,6 @@ ul li a:hover {
 }
 
 @media (min-width: 1024px) and (orientation: portrait) {
-
     .menu {
         left: 40%;
         right: 0;
@@ -127,16 +126,12 @@ ul li a:hover {
         height: 5vh;
     }
 
-
-
     ul li a {
         padding: 20px 10px;
         color: black;
         font-size: 20px;
         letter-spacing: 0px;
     }
-
-
 
     .logo span {
         padding-left: 20px;
@@ -149,7 +144,6 @@ ul li a:hover {
     .burger {
         display: none;
     }
-
 }
 
 /* HEADER */
@@ -214,6 +208,24 @@ header .wrap button {
     .btn {
         padding: 20px 30px;
         font-size: 22px;
+    }
+}
+
+@media (min-width: 1024px) and (orientation: portrait) {
+    header {
+        height: 50vh;
+    }
+
+    .wrap {
+        height: 50vh;
+    }
+
+    header .wrap h1 {
+        padding: 30% 5% 1% 5%;
+    }
+
+    header .wrap p {
+        padding: 1%;
     }
 }
 
