--- a/style.css
+++ b/style.css
@@ -928,6 +928,54 @@ header .wrap button {
     }
 }
 
+@media (min-width: 1024px) and (orientation: portrait) {
+    .clients {
+        justify-content: space-around;
+    }
+
+    .heading p {
+        font-size: 28px;
+    }
+
+    .customerFoto {
+        flex-basis: 30%;
+    }
+
+    .customerFoto img {
+        width: 100%;
+    }
+
+    .customer p:nth-of-type(1) {
+        font-size: 28px;
+
+    }
+
+    .customer p:nth-of-type(2) {
+        font-size: 28px;
+    }
+
+    .customer {
+        flex-basis: 60%;
+    }
+
+    .customer:after {
+        top: 50%;
+        left: -15px;
+        transform: rotate(-90deg)
+    }
+
+    .customerFoto:nth-of-type(4) {
+        order: 4;
+    }
+
+    /* select the last :after pseudo element of .clients */
+    .clients div:nth-last-of-type(1):after {
+        top: 50%;
+        left: 100%;
+        transform: rotate(90deg);
+    }
+}
+
 /* SECTION NEXT-PROJECT */
 
 .next-project {
