--- a/style.css
+++ b/style.css
@@ -1034,7 +1034,6 @@ header .wrap button {
 }
 
 @media (min-width: 768px) and (orientation: portrait) {
-
     .next {
         margin-bottom: 1%;
     }
@@ -1043,7 +1042,6 @@ header .wrap button {
         font-size: 40px;
         padding: 3% 5%;
     }
-
 
     .next button {
         font-size: 22px;
@@ -1057,6 +1055,22 @@ header .wrap button {
     .logo-next div {
         flex-basis: 50%;
         padding: 10%;
+    }
+}
+
+@media (min-width: 1024px) and (orientation: portrait) {
+    .next h1 {
+        padding: 5%;
+    }
+
+    .next button {
+        font-size: 28px;
+        margin: 4%;
+    }
+
+    .logo-next div {
+        flex-basis: 25%;
+        padding: 10% 1%;
     }
 }
 
