--- a/style.css
+++ b/style.css
@@ -722,6 +722,52 @@ header .wrap button {
 
 }
 
+@media (min-width: 640px) and (orientation: landscape) {
+    .description h1 {
+        padding: 5% 3% 0% 3%;
+    }
+
+    .description p {
+        padding: 0% 5%;
+    }
+
+    .description p:nth-last-of-type(1) {
+        padding: 0% 5% 2% 5%;
+    }
+
+    .description h2 {
+        padding: 5% 5% 0% 5%;
+    }
+
+    .tech {
+        padding: 0 5%;
+    }
+
+    .tech div {
+        padding: 0;
+        flex-basis: 12%;
+    }
+
+    .tech .spec {
+        flex-basis: 85%;
+        padding: 3%;
+    }
+
+
+    .tech p:nth-last-child(2) {
+        padding-top: 3%;
+        padding-bottom: 3%;
+    }
+
+    .techImage {
+        height: 20vh;
+    }
+
+    .techImage img {
+        left: 70%;
+    }
+}
+
 /* SECTION ATTRIBUTE */
 
 .attribute {
